<resources>
    <string name="app_name">Xhop</string>
    <string name="title_shop">Home</string>
    <string name="title_search">Search</string>
    <string name="title_cart">Cart</string>
    <string name="title_profile">Profile</string>
    <string name="title_more">More</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="categories">Categories</string>
    <string name="see_all">See All</string>
    <string name="apparel">Apparel</string>
    <string name="latest">Latest</string>
    <string name="ankle_boots">Ankle Boots</string>
    <string name="_49_9">$49.9</string>
    <string name="back_pack">Back Pack</string>
    <string name="_20_58">$20.58</string>
    <string name="for_all_your_summer_clothing_needs">For all your Summer Clothing needs</string>
    <string name="see_more">SEE MORE</string>
    <string name="all_categories">All Categories</string>
    <string name="electronics">Electronics</string>
    <string name="shoes">Shoes</string>
    <string name="beauty">Beauty</string>
    <string name="mens_apparel">MENS APPAREL</string>
    <string name="women_apparel">WOMEN APPAREL</string>
    <string name="search">Search</string>
    <string name="search_something">Search Something</string>
    <string name="cart">Cart</string>
    <string name="faux_sued_ankle_boots">Faux Sued Ankle Boots</string>
    <string name="jane_doe">Jane Doe</string>
    <string name="edit_profile">EDIT PROFILE</string>
    <string name="more">More</string>
    <string name="checkout">Checkout</string>
    <string name="shipping_address">SHIPPING ADDRESS</string>
    <string name="payment_method">PAYMENT METHOD</string>
    <string name="message_text">Dear customer, your order has been shipped. Please see below for the tracking number. UH2983948935B Your parcel should arrive between 10 - 20 days. If you have any questions, please contact us and we will get back to you at our earliest. Thank you for choosing our shop! 😊</string>
    <string name="smiley_s_store_marked">Smiley’s Store marked your order #1982984 as shipped.</string>
    <string name="desription_label">7, Hot Black</string>
    <string name="product">Product</string>
    <string name="details">Details</string>
    <string name="reviews">Reviews</string>
    <string name="select_color">SELECT COLOR</string>
    <string name="select_size_us">SELECT SIZE(US)</string>
    <string name="add_to_cart">ADD TO CART</string>
    <string name="subcategory_label">SubCategory</string>


    <string name="true_button">True</string>
    <string name="false_button">False</string>
    <string name="correct_toast">Correct!</string>
    <string name="incorrect_toast">InCorrect!</string>
    <string name="menu_settings">Settings</string>
    <string name="next_button">Next</string>
    <string name="question_oceans">The Pacific Ocean is larger than     the Atlantic Ocean.</string>
    <string name="question_mideast">The Suez Canal connects the Red Sea     and the Indian Ocean.</string>
    <string name="question_africa">The source of the Nile River is in Egypt.</string>
    <string name="question_americas">The Amazon River is the longest river     in the Americas.</string>
    <string name="question_asia">Lake Baikal is the world\'s oldest and deepest     freshwater lake.</string>
    <string name="cheat_button">Cheat!</string>
    <string name="warning_text">Are you sure you want to do this?</string>
    <string name="show_answer_button">Show Answer</string>
    <string name="judgment_toast">Cheating is wrong.</string>
    <string name="imagebutton">ImageButton</string>
    <string name="all_my_orders">All My Orders</string>
    <string name="login">LOGIN</string>
    <string name="logout">LOGOUT</string>
    <string name="auth_code_fmt">Auth Code: %s</string>

    <string name="disconnect">Disconnect</string>
    <string name="request_complete">Request Complete</string>
    <string name="request_failed">Request Failed</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="sign_upp">SIGN UP</string>
    <string name="password">Password</string>
    <string name="login_small">Login</string>
    <string name="trending">Welcome to Xhop the leading online shopping app</string>
    <string name="trending_text">Look Soft Like a Pastel this winter</string>
    <string name="bags">Bags</string>
    <string name="see_all_caps">SEE ALL</string>
    <string name="jackets">Jackets</string>
    <string name="elegance">ELEGANCE</string>
    <string name="elegance_text">All your fashion needs under one roof</string>
    <string name="dont_have_an_account">Dont have an Account</string>
    <string name="reset_password">Reset Password</string>
    <string name="signup_consent">By creating an account you agree to our Terms of Service and Privacy Policy</string>
    <string name="create_account_consent">Don\'t have an Account? Swipe Left to create a new account.</string>
    <string name="password_reset_consent">Enter the email address you used to create your account and we will email you a link to reset your password</string>
    <string name="email_holder">janedoe1234@gmail.com</string>
    <string name="name">name</string>
    <string name="price">Price</string>
    <string name="upload">Upload</string>
    <string name="color">Color</string>
    <string name="size">Size</string>
    <string name="category">Category</string>
    <string name="select">Select</string>
    <string name="top_rated">Top Rated</string>
    <string name="action_settings">Settings</string>
    <string name="activity_local_search">Local Search</string>
    <string name="activity_remote_search">Remote Search</string>
    <string name="hint_search">Type product name</string>
    <string name="home">Home</string>
    <string name="my_cart">My Cart</string>
    <string name="delete">DELETE</string>
    <string name="sign_in_with">Sign In with</string>
    <string name="smiley_s_store">Smiley\'s Store</string>
    <string name="lorem_ipsum_dolor_sit_amet_consectetur_adipiscing_elit_sed_do_eiusmod_tempor_incididunt">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt</string>
    <string name="jd">JD</string>
    <string name="_10_oct_2018">10 Oct,2018</string>
    <string name="review_cancel">review-cancel</string>
    <string name="review_ok">review_ok</string>
    <string name="write_something_here_please">Write Something Here Please</string>
    <string name="custom">Custom</string>
    <string name="_0">0</string>
    <string name="saf">Enter Safaricom\'s number to checkout…</string>
    <string name="hint">07xxxxxxxx</string>
    <string name="title_home">Home</string>
    <string name="el">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt</string>
    <string name="image">Image</string>
</resources>
